---------------------------------------------------------------------------------------------------
Version: 0.5.2
Date: ????
  Changes:
  Locale:
    - Updated Russian localization
---------------------------------------------------------------------------------------------------
Version: 0.5.1
Date: 2021-09-14
  Changes:
    - Changed icon for Oil refinery 3 to align with changes in Angel's Refining
  Locale:
    - Fixed that Flotation cell 4 was spelled incorrectly
    - Added partial localization for Brazilian Portuguese
---------------------------------------------------------------------------------------------------
Version: 0.5.0
Date: 2021-08-13
  Features:
    - Recipes have been reworked to be in-line with current Angel's recipes, and make use of higher tier materials where appropriate
    - Technologies have had their time requirements updated to be more in-line with current Angel's technologies (15s -> 30s)
    - Angel's Bioprocessing minimum required version now 0.7.20
  Changes:
    - Angel's Bioprocessing 0.7.20 adds an Algae farm 4; as such the Algae farm 4 added by this mod has been changed to the Algae farm 5
      - No migration of existing algae farm 4s will be attempted to avoid collisions with Angel's Bioprocessing
  Bugfixes:
    - Updated the API call to Angel's Industries for `add_minable_results`, fixing a startup error
  Locale:
    - Added localization for Russian
---------------------------------------------------------------------------------------------------
Version: 0.4.8
Date: 2021-06-13
  Changes:
    - Angel's Smelting minimum version set to 0.6.15
    - Angel's Bioprocessing minimum version set to 0.7.18
    - Removed now-redundant code bits related to supporting older versions of Angel's Smelting and Angel's Bioprocessing
  Locale:
    - Renamed Press 2 and Press 3 to Oil press 2 and Oil press 3 reflecting changes in Angel's Bioprocessing
    - Updated German localization